--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/elliptic/6.5.4/elliptic.min.js"></script>
-    <script src="app4.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
+
