--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Blockchain Simulator - Versi Final</title>
-    <link rel="stylesheet" href="style4.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="navbar">
@@ -352,4 +352,5 @@
     <script src="app.js"></script>
   </body>
 </html>
+
 
